fixed password focus color

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="password">
                 <div>
                     <label for="password">PASSWORD</label>
-                    <input type="password" id="password">
+                    <input type="password" id="password" title="Passwords do not match">
                 </div>
     
                 <div>
